...
    /// GitHub item (リポジトリ一情報).
    var gitHubItem: GitHubItem?

    override func viewDidLoad() {
        super.viewDidLoad()

        navigationItem.title = "詳細"

        fullNameLabel.text = gitHubItem?.fullName

        if let language = gitHubItem?.language {
            languageLabel.text = "Written in \(language)"
        } else {
...
