...

    private var task: URLSessionTask?

    override func viewDidLoad() {
        super.viewDidLoad()

        navigationItem.title = "リポジトリ検索"

        querySearchBar.placeholder = "GitHub-検索文字列を入力"
        querySearchBar.delegate = self
    }

    override func prepare(for segue: UIStoryboardSegue, sender: Any?) {
...
